force-app/main/default/objects/MUSW__Permit2__c/fields/MUSW__Parcel_Owner__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parcel_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>As indicated on parcel</inlineHelpText>
    <label>Primary Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Permits as Primary Owner</relationshipLabel>
    <relationshipName>Parcel_Owner_Permit2s</relationshipName>
    <type>Lookup</type>
</CustomField>