force-app/main/default/objects/MUSW__Permit2__c/fields/MUSW__Use_Group__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Use_Group__c</fullName>
    <inlineHelpText>from the International Building Code of ICC</inlineHelpText>
    <label>Use Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R-3</fullName>
                <default>true</default>
                <label>R-3</label>
            </value>
            <value>
                <fullName>R-1</fullName>
            </value>
            <value>
                <fullName>R-2</fullName>
            </value>
            <value>
                <fullName>R-4</fullName>
            </value>
            <value>
                <fullName>A-1</fullName>
            </value>
            <value>
                <fullName>A-2</fullName>
            </value>
            <value>
                <fullName>A-3</fullName>
            </value>
            <value>
                <fullName>A-4</fullName>
            </value>
            <value>
                <fullName>A-5</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F-1</fullName>
            </value>
            <value>
                <fullName>F-2</fullName>
            </value>
            <value>
                <fullName>H-1</fullName>
            </value>
            <value>
                <fullName>H-2</fullName>
            </value>
            <value>
                <fullName>H-3</fullName>
            </value>
            <value>
                <fullName>H-4</fullName>
            </value>
            <value>
                <fullName>H-5</fullName>
            </value>
            <value>
                <fullName>I-1</fullName>
            </value>
            <value>
                <fullName>I-2</fullName>
            </value>
            <value>
                <fullName>I-3</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>S-1</fullName>
            </value>
            <value>
                <fullName>S-2</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>