force-app/main/default/objects/MUSW__Permit2__c/fields/MUSW__Use_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Use_Type__c</fullName>
    <label>Use Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Multi Family Dwelling</fullName>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Single Family Dwelling</fullName>
                <default>true</default>
                <label>Single Family Dwelling</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Mobile Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>