force-app/main/default/objects/MUSW__Permit2__c/fields/MUSW__Work_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Work_Type__c</fullName>
    <label>Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>Alteration</fullName>
            </value>
            <value>
                <fullName>Demolition</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>