force-app/main/default/objects/MUSW__Permit2__c/fields/MUSW__Zip__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Zip__c</fullName>
    <label>Zip/ Post Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>