force-app/main/default/objects/MUSW__Permit2__c/fields/Permit2__c.field-meta.xml
<CustomField>
    <fullName>Permit2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Permit</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Permits</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>