force-app/main/default/objects/MUSW__Permit2__c/recordTypes/All.recordType-meta.xml
<RecordType>
    <fullName>All</fullName>
    <active>true</active>
    <label>All</label>
</RecordType>