force-app/main/default/objects/MUSW__Permit2__c/listViews/MUSW__All1.listView-meta.xml
<ListView>
    <fullName>MUSW__All1</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Street__c</columns>
    <columns>MUSW__Applicant__c</columns>
    <columns>MUSW__Issue_Date__c</columns>
    <columns>MUSW__Alert_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>